--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                     <label for="withdraw" class="form-label">Withdraw Amount</label>
                     <input type="number" class="form-control" id="withdraw" name="withdraw">
                 </div>
+                <div class="mb-3">
+                    <label for="recordDate" class="form-label">Record Date</label>
+                    <input type="date" class="form-control" id="recordDate" name="recordDate" required>
+                </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
